<resources>
    <string name="app_name">Tugas MAD 1</string>
    <string name="food">Food</string>
    <string name="drink">Drink</string>
    <string name="harga_makanan">Harga Makanan</string>
    <string name="nama_makanan">Nama Makanan</string>
    <string name="nama_minuman">Jus Strawberry</string>
    <string name="rp_15000">Rp 15.000</string>
    <string name="kopi">Cappucino</string>
    <string name="rp_10000">Rp 10.000</string>
    <string name="milo">Es Milo</string>
    <string name="rp_12000">Rp 12.000</string>
    <string name="nasi_goreng">Nasi Goreng</string>
    <string name="rp_20000">Rp 20.000</string>
    <string name="spaghetti">Spaghetti</string>
    <string name="nasi_mentega">Nasi Mentega</string>
    <string name="gorengan">Gorengan</string>
    <string name="desnasgor">Nasi goreng adalah sebuah makanan berupa nasi yang digoreng dan diaduk dalam minyak goreng atau margarin, biasanya ditambah kecap manis, bawang merah, bawang putih, asam jawa, lada dan bumbu-bumbu lainnya, seperti telur, ayam, dan kerupuk</string>
    <string name="desmilo">Milo adalah sebuah merek minuman dengan rasa cokelat dan malt. Minuman ini diproduksi oleh Nestlé, minuman ini sebenarnya berasal dari Australia namun saat ini sudah diproduksi di berbagai negara, termasuk Singapura, Filipina, Selandia Baru, India, Vietnam, Afrika Selatan, Jamaika, Jepang, Cile, Thailand, Malaysia, Indonesia, Nigeria, Kenya, Syria, dan Ghana. Nama Milo berasal dari Milo of Croton, seorang atlet Yunani yang terkenal.</string>
    <string name="desstrawberry">Jus strawberry kaya akan kandungan vitamin C yang baik untuk kesehatan. Nah, yang perlu kamu ketahui vitamin C ini dapat membantu kamu dalam menurunkan kolesterol dalam tubuh. Selain karena rasanya yang asam juga mampu membunuh berbagai penyakit dan bakteri di dalam perut, juga dapat menjadi detoks tubuh yang sangat baik.</string>
    <string name="descappucino">Kapucino adalah minuman khas Italia yang dibuat dari espresso dan susu, tetapi referensi lain juga ada yang menyebutkan bahwa kapucino berawal dari biji biji kopi tentara Turki yang tertinggal setelah peperangan yang di pimpin oleh Kara Mustapha Pasha di Wina, Austria melawan tentara gabungan Polandia-Germania.</string>
    <string name="desmentega">Nasi Mentega merupakan menu kreasi nasi yang sudah terkenal sejak tahun 90-an. Biasanya menu ini menjadi menu favorit sebagai sarapan atau bekal untuk si kecil. Kini Anda bisa mencoba lagi resep Nasi Mentega yang enak dengan menggunakan Kobe Bumbu Nasi Goreng Poll Ayaaam. Ditambah dengan daging asap dan potongan keju akan membuat si kecil makin lahap karena kelezatan rasanya.</string>
    <string name="desspaghetti">Spageti adalah salah satu jenis pasta yang berbentuk panjang, tipis, silindris, dan padat, yang jika diperhatikan menyerupai mie pada umumnya. Ini adalah makanan pokok dalam masakan Italia tradisional</string>
    <string name="pesan">Pesan</string>
</resources>
