<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFood"
    android:orientation="vertical"
    android:background="@drawable/menu1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/food"
        android:textAlignment="center"
        android:textSize="35sp"
        android:fontFamily="serif"
        android:textColor="@color/putih"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:id="@+id/LayoutNasiGoreng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="16dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/nasigoreng"
            android:scaleType="fitXY"/>

        <LinearLayout
            android:layout_marginLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nasi_goreng"
                android:textStyle="bold"
                android:textColor="@color/putih"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rp_12000"
                android:layout_marginTop="8dp"
                android:textColor="@color/putih"/>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LayoutSpaghetti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="16dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/spaghetti"
            android:scaleType="fitXY"/>

        <LinearLayout
            android:layout_marginLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spaghetti"
                android:textStyle="bold"
                android:textColor="@color/putih"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rp_20000"
                android:layout_marginTop="8dp"
                android:textColor="@color/putih"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutNasiMentega"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="16dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/nasimentega"
            android:scaleType="fitXY"/>

        <LinearLayout
            android:layout_marginLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nasi_mentega"
                android:textStyle="bold"
                android:textColor="@color/putih"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rp_10000"
                android:layout_marginTop="8dp"
                android:textColor="@color/putih"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>